# trade-explorer

./: .gitignore  README.md  observablehq.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  staging.yml
data_preparation/: .gitignore  format_trade_data.py
data_preparation/utils/: african_countries.txt  african_regions.json  cepii_wrangler.py  paths.py  wdi_wranggler.py
scripts/: .gitignore  config.py  conversions.py  format_data.py
scripts/data/: currency_conversion.csv
scripts/settings/: countries.json  hs_categories.json  hs_sections.json
src/: about.md  custom-style.css  faqs.md  index.md  methodology.md  multi-country.md  multi.md  single-country.md  style.css
src/.observablehq/: deploy.json
src/components/: ONEPalette.js  colorPalette.js  colors.js  dataQueries.js  downloadImage.js  downloadPNG.js  downloadXLSX.js  downloads.js  dropdownInput.js  filterData.js  formatString.js  formatValue.js  formatYear.js  getCurrencyLabel.js  getLimits.js  getUnitLabel.js  groupData.js  hex2rgb.js  inputValues.js  jitterLabels.js  multiSelect.js  plotMulti.js  plotSingle.js  queries.js  rangeInput.js  reactiveWidth.js  reshapeDataForTable.js  setCustomColors.js  sortCategories.js  sortCountries.js  sparkbar.js  tableMulti.js  tableSingle.js  theme_Flat.js  utils.js  visuals.js  xDomain.js  yDomain.js
src/data/: .gitignore  africa_trade.parquet.py  config.py  conversions.parquet.py  trade.parquet.py
src/data/scripts/: constant_conversion_table.csv.py  conversion_table.csv.py  country_aggregates.csv.py  (+6 more)
(+5 files in other folders)
