[porject]
name = "trade-data-explorer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
bblocks-data-importers = "^0.2.1"
pydeflate = "^2.1.0"
country-converter = "^1.3"
pathlib = "^1.0.1"
black = "^25.1.0"
ftfy = "^6.3.1"
oda-reader = "^1.0.5"
bblocks = "^1.4.1"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
